compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_function_call_unsatisfied_constraints.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "trait A {}\n\n        trait B {}\n\n        fn foo<T: A + B>() { }\n\n        fn bar() {\n            foo<Boolean>();\n        }"
---
× error[LM4120]: type constraint not satisfied
   ╭───────────
 7 │         fn bar() {
 8 │             foo<Boolean>();
   │                 ^^^^^^^ type Boolean does not implement A...
 9 │         }
   ∶ 
 4 │ 
 5 │         fn foo<T: A + B>() { }
   │                   ^ ...which is required by the type parameter T
   ╰──
× error[LM4120]: type constraint not satisfied
   ╭───────────
 7 │         fn bar() {
 8 │             foo<Boolean>();
   │                 ^^^^^^^ type Boolean does not implement B...
 9 │         }
   ∶ 
 4 │ 
 5 │         fn foo<T: A + B>() { }
   │                       ^ ...which is required by the type parameter T
   ╰──
